--- a/index.html
+++ b/index.html
@@ -51,8 +51,29 @@
 
     </header>
     <main>
-        
-
+       <section>
+        <h2 class="section-title">Standard Curriculumn</h2>
+        <div class="card-box display-flex">
+            <div class="card1">
+                <img src="assets/kinder.png" alt="">
+                <h3 class="card1-title">Kinder (3-6) Years</h3>
+                <p class="card1-description">Kindergarten[a] is a preschool educational approach based on playing, singing, practical activities such as drawing, and social interaction as part of the transition from home to school. </p>
+                <p class="card1-extension">Read More</p>
+            </div>
+            <div class="card2">
+                <img src="assets/elementary.png" alt="">
+                <h3 class="card2-title">Elementary School</h3>
+                <p class="card2-description">Elementary schools are the main point of delivery of primary education, for children between the ages of 4–11 (sometimes 4-10 or 4-12) and coming between pre-kindergarten and secondary education.[1]</p>
+                <p class="card2-extension">Read More</p>
+            </div>
+            <div class="card3">
+                <img src="assets/middle.png" alt="">
+                <h3 class="card3-title">Middle (10-16) Years</h3>
+                <p class="card3-description">Middle school, also known as intermediate school, junior high school, junior secondary school, or lower secondary school, is an educational stage between primary school and secondary school.</p>
+                <p class="card3-extension">Read More</p>
+            </div>
+        </div>
+       </section>
     </main>
     <footer>
 
