--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="styles/style.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+
+
 </head>
 
 <body class="quicksand-font">
@@ -57,22 +64,24 @@
             <div class="card1">
                 <img src="assets/kinder.png" alt="">
                 <h3 class="card1-title">Kinder (3-6) Years</h3>
-                <p class="card1-description">Kindergarten[a] is a preschool educational approach based on playing, singing, practical activities such as drawing, and social interaction as part of the transition from home to school. </p>
+                <p class="card1-description light-gray">Kindergarten[a] is a preschool educational approach based on playing, singing, practical activities such as drawing, and social interaction as part of the transition from home to school. </p>
                 <p class="card1-extension">Read More</p>
             </div>
             <div class="card2">
                 <img src="assets/elementary.png" alt="">
                 <h3 class="card2-title">Elementary School</h3>
-                <p class="card2-description">Elementary schools are the main point of delivery of primary education, for children between the ages of 4–11 (sometimes 4-10 or 4-12) and coming between pre-kindergarten and secondary education.[1]</p>
+                <p class="card2-description light-gray">Elementary schools are the main point of delivery of primary education, for children between the ages of 4–11 (sometimes 4-10 or 4-12) and coming between pre-kindergarten and secondary education.[1]</p>
                 <p class="card2-extension">Read More</p>
             </div>
             <div class="card3">
                 <img src="assets/middle.png" alt="">
                 <h3 class="card3-title">Middle (10-16) Years</h3>
-                <p class="card3-description">Middle school, also known as intermediate school, junior high school, junior secondary school, or lower secondary school, is an educational stage between primary school and secondary school.</p>
+                <p class="card3-description light-gray">Middle school, also known as intermediate school, junior high school, junior secondary school, or lower secondary school, is an educational stage between primary school and secondary school.</p>
                 <p class="card3-extension">Read More</p>
             </div>
         </div>
+        <i class="fa-solid fa-angle-right"></i>
+        <i class="fa-solid fa-angle-right"></i>
        </section>
     </main>
     <footer>
