chaged the logo color

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
 
         </nav>
+
+        <marquee width="100%" height="70px" direction="right">Schools are organized spaces purposed for teaching and learning. </marquee>
         <div class="banner display-flex">
             <div class="banner-content">
                 <h1 class="banner-title"><span id="empower">Empowering</span><br>
@@ -56,6 +58,7 @@
 
     </header>
     <main>
+        
         <section class="card-section">
             <h2 class="section-title">Standard Curriculumn</h2>
             <div class="card-box display-flex">
