changed the color of footer logo

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <footer>
         <div class="footer-container">
             <div>
-                <div class="display-flex logo-title"><img class="logo" src="assets/logo.png" alt="">
+                <div class="display-flex logo-title"><img class="footer-logo" src="assets/logo.png" alt="">
                     <h3 class="footer-title">Kids
                         Education</h3></div>
                 <p class="footer-description">AI Overview
